--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <p>21. Florida, by Lauren Groff ★★★★</p>
 <p>22. The Obstacle is the Way, by Ryan Holiday ★★★</p>
 <p>23. How to Fail at Almost Everything and Still Win Big, by Scott Adams ★★★1/2</p>
-<p>24. Girl, Decoded by Rana el Kaliouby ★★★1/2</p>
+<p>24. Girl, Decoded: A Scientist's Quest to Reclaim Our Humanity by Bringing Emotional Intelligence to Technology, by Rana el Kaliouby ★★★1/2</p>
 <p>25. The Enchiridion, by Epictetus ★★★★</p>
   </div>
   <h2>2019</h2>
