--- a/quotes.html
+++ b/quotes.html
@@ -44,6 +44,7 @@ But I know for a fact I could not do what I do if I was not zealous in managing 
 <div data-block-type="47">
 <div><hr /></div>
 <div data-block-type="2">
+ <p class="quote">
   “If anyone tells you that a certain person speaks ill of you, do not make excuses about what is said of you but answer, "He was ignorant of my other faults, else he would not have mentioned these alone.”
 ― Epictetus
 <div data-block-type="47">
