--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 <p>23. How to Fail at Almost Everything and Still Win Big, by Scott Adams ★★★1/2</p>
 <p>24. Girl, Decoded: A Scientist's Quest to Reclaim Our Humanity by Bringing Emotional Intelligence to Technology, by Rana el Kaliouby ★★★1/2</p>
 <p>25. The Enchiridion, by Epictetus ★★★★</p>
+<p>26. Are you there, Vodka? It's me, Chelsea, by Chelsea Handler ★★★★</p>
   </div>
   <h2>2019</h2>
 
