--- a/quotes.html
+++ b/quotes.html
@@ -49,5 +49,11 @@ But I know for a fact I could not do what I do if I was not zealous in managing 
 ― Epictetus, The Enchiridion
 <div data-block-type="47">
 <div><hr /></div>
+  <div data-block-type="2">
+ <p class="quote">
+  "It is very hard to fail completely if you aim high enough"
+― Larry Page
+<div data-block-type="47">
+<div><hr /></div>
 </div>
 <div data-block-type="2">
