--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <p>24. Girl, Decoded: A Scientist's Quest to Reclaim Our Humanity by Bringing Emotional Intelligence to Technology, by Rana el Kaliouby ★★★1/2</p>
 <p>25. The Enchiridion, by Epictetus ★★★★</p>
 <p>26. Are you there, Vodka? It's me, Chelsea, by Chelsea Handler ★★★★</p>
+<p>27. The Inner Game of Tennis, by Timothy Gallwey ★★★★</p>
   </div>
   <h2>2019</h2>
 
