--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 <p>25. The Enchiridion, by Epictetus ★★★★</p>
 <p>26. Are you there, Vodka? It's me, Chelsea, by Chelsea Handler ★★★★</p>
 <p>27. The Inner Game of Tennis, by Timothy Gallwey ★★★★</p>
+<p>28. It Chooses You, by Miranda July ★★★★</p>
   </div>
   <h2>2019</h2>
 
