--- a/quotes.html
+++ b/quotes.html
@@ -33,6 +33,8 @@ The problem is no one manages your input. The boss never cares about your input.
 But I know for a fact I could not do what I do if I was not zealous in managing high-quality inputs into my mind every day of my life." - <a href="https://conversationswithtyler.com/episodes/ted-gioia/">Ted Gioia, on Conversations with Tyler podcast</a></p>
  <div data-block-type="47">
 <div><hr /></div>
+   "Life is too short to not read the very best book you know of right now.”
+- Patrick Collision
 </div>
 <div data-block-type="2"> 
 <p class="quote">"But the audience is right. They're always, always right. You hear directors complain that the advertising was lousy, the distribution is no good, the date was wrong to open the film. I don't believe that. The audience is never wrong. Never." - William Friedkin, in a NYT interview. I first read this on <a href="http://www.paulgraham.com/quo.html?viewfullsite=1"> Paul Graham's quotes page.</a></p>
@@ -48,6 +50,13 @@ But I know for a fact I could not do what I do if I was not zealous in managing 
   “If anyone tells you that a certain person speaks ill of you, do not make excuses about what is said of you but answer, <em>He was ignorant of my other faults, else he would not have mentioned these alone.</em>"
 ― Epictetus, The Enchiridion
 <div data-block-type="47">
+  
+  Writing is thinking. 
+
+To believe that something in your head feels clear, is thinking, is a very dangerous thing. When you try to put in down on a page in a structured order that someone else can digest, and you find you can’t… writing ideas down and laying the ideas out is thinking. Sitting and starting out a window, maybe with a cigarette, whatever you think it is that is philosophizing  is not structured thinking. It’s only when you are writing down, getting order into your thoughts on the page so that another person can get into the context, the perspective that you are pulling in to have your worldview. 
+
+Writing is thinking, and thinking is hard work.
+- Conor Neill
 <div><hr /></div>
   <div data-block-type="2">
  <p class="quote">
