--- a/quotes.html
+++ b/quotes.html
@@ -50,6 +50,8 @@ But I know for a fact I could not do what I do if I was not zealous in managing 
   “If anyone tells you that a certain person speaks ill of you, do not make excuses about what is said of you but answer, <em>He was ignorant of my other faults, else he would not have mentioned these alone.</em>"
 ― Epictetus, The Enchiridion
 <div data-block-type="47">
+<div><hr /></div>
+<div data-block-type="2">
   
   Writing is thinking. 
 
@@ -58,7 +60,9 @@ To believe that something in your head feels clear, is thinking, is a very dange
 Writing is thinking, and thinking is hard work.
 - Conor Neill
 <div><hr /></div>
-  <div data-block-type="2">
+<div data-block-type="47">
+<div><hr /></div>
+<div data-block-type="2">
  <p class="quote">
   "It is very hard to fail completely if you aim high enough"
 ― Larry Page
