--- a/quotes.html
+++ b/quotes.html
@@ -34,7 +34,8 @@ But I know for a fact I could not do what I do if I was not zealous in managing 
  <div data-block-type="47">
 <div><hr /></div>
    </div>
-<div data-block-type="2"> 
+<div data-block-type="2">
+   <p class="quote">
    "Life is too short to not read the very best book you know of right now.”
 - Patrick Collision
 </div>
@@ -54,7 +55,7 @@ But I know for a fact I could not do what I do if I was not zealous in managing 
 <div data-block-type="47">
 <div><hr /></div>
 <div data-block-type="2">
-  
+  <p class="quote">
   Writing is thinking. 
 
 To believe that something in your head feels clear, is thinking, is a very dangerous thing. When you try to put in down on a page in a structured order that someone else can digest, and you find you can’t… writing ideas down and laying the ideas out is thinking. Sitting and starting out a window, maybe with a cigarette, whatever you think it is that is philosophizing  is not structured thinking. It’s only when you are writing down, getting order into your thoughts on the page so that another person can get into the context, the perspective that you are pulling in to have your worldview. 
