--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 <p>26. Are you there, Vodka? It's me, Chelsea, by Chelsea Handler ★★★★</p>
 <p>27. The Inner Game of Tennis, by Timothy Gallwey ★★★★</p>
 <p>28. It Chooses You, by Miranda July ★★★★</p>
+<p>29. Loserthink, by Scott Adams ★★★1/2</p>
   </div>
   <h2>2019</h2>
 
