--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 <p>27. The Inner Game of Tennis, by Timothy Gallwey ★★★★</p>
 <p>28. It Chooses You, by Miranda July ★★★★</p>
 <p>29. Loserthink, by Scott Adams ★★★1/2</p>
+<p>30. Win Bigly, by Scott Adams ★★★</p>
   </div>
   <h2>2019</h2>
 
