--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 <p>28. It Chooses You, by Miranda July ★★★★</p>
 <p>29. Loserthink, by Scott Adams ★★★1/2</p>
 <p>30. Win Bigly, by Scott Adams ★★★</p>
+<p>31. Hitch-22 by Christopher Hitchens ★★★</p>
+<p>32. The Vanishing Half by Brit Bennett ★★1/2</p>
+<p>33. 1453: The Holy War for Constantinople and the Clash of Islam and the West, by Roger Crowley ★★★</p>
+<p>34. The Pale Horseman, by Bernard Cornwell ★★★★</p>
   </div>
   <h2>2019</h2>
 
@@ -103,7 +107,7 @@
 <p>5. <a target="_blank" href="https://www.amazon.com/gp/product/1590179269/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1590179269&linkId=cdb885a7a2ce9b1ff0099f757accbe8d">The Cowshed: Memories of the Chinese Cultural Revolution</a>, by Ji Xianlin ★★★★ </p>
 <p style="color:green;">6. Educated, by Tara Westover ★★★★</p></p>
 <p>7. The Last Kingdom, by Bernard Cornwell ★★★★</p>
-<p>8. Stubborn Attachments, by Tyler Cowen★★★</p>
+<p>8. Stubborn Attachments, by Tyler Cowen ★★★</p>
   
   </div>
 <div data-block-type="47">
