--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 <p>33. 1453: The Holy War for Constantinople and the Clash of Islam and the West, by Roger Crowley ★★★</p>
 <p>34. The Pale Horseman, by Bernard Cornwell ★★★★</p>
 <p>35. Thinking of Answers: Questions in the Philosophy of Everyday Life, by A.C. Grayling ★★★</p>
+<p>36. The Poisonwood Bible, by Barbara Kingsolver ★★★★</p>
   </div>
   <h2>2019</h2>
 
