--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 <p>34. The Pale Horseman, by Bernard Cornwell ★★★★</p>
 <p>35. Thinking of Answers: Questions in the Philosophy of Everyday Life, by A.C. Grayling ★★★</p>
 <p>36. The Poisonwood Bible, by Barbara Kingsolver ★★★★</p>
+<p>37. Open Borders: The Science and Ethics of Immigration, by Bryan Caplan and Zach Weinersmith ★★★★</p>
   </div>
   <h2>2019</h2>
 
