--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 <p>35. Thinking of Answers: Questions in the Philosophy of Everyday Life, by A.C. Grayling ★★★</p>
 <p>36. The Poisonwood Bible, by Barbara Kingsolver ★★★★</p>
 <p>37. Open Borders: The Science and Ethics of Immigration, by Bryan Caplan and Zach Weinersmith ★★★★</p>
+<p>38. Free Will, by Sam Harris ★★★★</p>
   </div>
   <h2>2019</h2>
 
