--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
 <p>36. The Poisonwood Bible, by Barbara Kingsolver ★★★★</p>
 <p>37. Open Borders: The Science and Ethics of Immigration, by Bryan Caplan and Zach Weinersmith ★★★★</p>
 <p>38. Free Will, by Sam Harris ★★★★</p>
+<p>39. Invisible Women: Exposing Data Bias in a World Designed for Men, by Caroline Criado-Perez ★★★</p>
+<p>40. Theft by Finding: Diaries (1977–2002), by David Sedaris ★★★1/2</p>
+<p>41. Ten Arguments for Deleting Your Social Media Accounts Right Now, by Jaron Lanier ★★★★</p>
+  
   </div>
   <h2>2019</h2>
 
