--- a/quotes.html
+++ b/quotes.html
@@ -78,5 +78,13 @@ Writing is thinking, and thinking is hard work.
 ― Larry Page
 <div data-block-type="47">
 <div><hr /></div>
+  <div data-block-type="2">
+ <p class="quote">
+Bill: Was my reaction really that surprising?
+The Bride: Yes, it was. Could you do what you did? Of course you could. But, I never thought you could or would do that to me.
+Bill: I'm really sorry, Kiddo. You thought wrong.
+  -Kill Bill, Volume 2
+<div data-block-type="47">
+<div><hr /></div>
 </div>
 <div data-block-type="2">
