--- a/quotes.html
+++ b/quotes.html
@@ -80,9 +80,9 @@ Writing is thinking, and thinking is hard work.
 <div><hr /></div>
   <div data-block-type="2">
  <p class="quote">
-Bill: Was my reaction really that surprising?
-The Bride: Yes, it was. Could you do what you did? Of course you could. But, I never thought you could or would do that to me.
-Bill: I'm really sorry, Kiddo. You thought wrong.
+   <br>Bill: Was my reaction really that surprising? </br>
+<br>The Bride: Yes, it was. Could you do what you did? Of course you could. But, I never thought you could or would do that to me.</br>
+<br>Bill: I'm really sorry, Kiddo. You thought wrong.</br>
   -Kill Bill, Volume 2
 <div data-block-type="47">
 <div><hr /></div>
