--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 <p>39. Invisible Women: Exposing Data Bias in a World Designed for Men, by Caroline Criado-Perez ★★★</p>
 <p>40. Theft by Finding: Diaries (1977–2002), by David Sedaris ★★★1/2</p>
 <p>41. Ten Arguments for Deleting Your Social Media Accounts Right Now, by Jaron Lanier ★★★★</p>
+<p>42. The Life Changing Manga of Tidying up, by Marie Kondo ★★★1/2</p>
+<p>43. Solutions and Other Problems, by Allie Brosh ★★★★</p>
   
   </div>
   <h2>2019</h2>
