--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 <p>42. The Life Changing Manga of Tidying up, by Marie Kondo ★★★1/2</p>
 <p>43. Solutions and Other Problems, by Allie Brosh ★★★★</p>
 <p>44. How we Survived Communism and Even Laughed, by Slavenka Drakulic ★★★★ (I didn't laugh once reading this)</p>
+<p>45. Me Talk Pretty One Day, by David Sedaris, ★★★1/2</p>
+<p>46. Refugees, by Viet Thanh Nguyen ★★★</p>
+<p>47. Hold Me Tight, by Dr. Sue Johnson ★★★★</p>
   
   </div>
   <h2>2019</h2>
