--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <p>41. Ten Arguments for Deleting Your Social Media Accounts Right Now, by Jaron Lanier ★★★★</p>
 <p>42. The Life Changing Manga of Tidying up, by Marie Kondo ★★★1/2</p>
 <p>43. Solutions and Other Problems, by Allie Brosh ★★★★</p>
-<p>44. How we Survived Communism and Even Laughed, by Slavenka Drakulic ★★★★ (I didn't laugh once reading this)</p>
+<p>44. How We Survived Communism and Even Laughed, by Slavenka Drakulic ★★★★ (I didn't laugh once reading this)</p>
 <p>45. Me Talk Pretty One Day, by David Sedaris, ★★★1/2</p>
 <p>46. The Refugees, by Viet Thanh Nguyen ★★★</p>
 <p>47. Hold Me Tight, by Sue Johnson ★★★★</p>
