--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
 <p>46. The Refugees, by Viet Thanh Nguyen ★★★</p>
 <p>47. Hold Me Tight, by Sue Johnson ★★★★</p>
 <p>48. The Global Citizen, by Donella H. Meadows ★★★★</p>
+<p>49. The Gifts of Imperfection, by Brene Brown ★★★1/2</p>
+<p>50. Three Uses of a Knife, by David Mamet ★★★1/2</p>
+<p>51. The Wife's Tale, by Aida Edemariam ★★1/2</p>
   
   </div>
   <h2>2019</h2>
