--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <p>47. Hold Me Tight, by Sue Johnson ★★★★</p>
 <p>48. The Global Citizen, by Donella H. Meadows ★★★★</p>
 <p>49. The Gifts of Imperfection, by Brene Brown ★★★1/2</p>
-<p>50. Three Uses of a Knife, by David Mamet ★★★1/2</p>
+<p>50. Three Uses of The Knife, by David Mamet ★★★1/2</p>
 <p>51. The Wife's Tale, by Aida Edemariam ★★1/2</p>
   
   </div>
