--- a/quotes.html
+++ b/quotes.html
@@ -85,6 +85,7 @@ Writing is thinking, and thinking is hard work.
 <br>Bill: I'm really sorry, Kiddo. You thought wrong.</br>
   -Kill Bill, Volume 2
 <div data-block-type="47">
+  <br>I love that one. If someone you love is doing something evil to another, you're a fool to think they'd never do it to you. When I read this line in Meditations by Marcus Aurelius, I like was like, "Yesss, the Kiddo line!" "... and one more thought, from Apollo: That to expect bad people not to injure others is crazy. It's to ask the impossible. And to let them behave like that to other people but to expect them to exempt you is arrogant - the act of a tyrant."
 <div><hr /></div>
 </div>
 <div data-block-type="2">
