--- a/quotes.html
+++ b/quotes.html
@@ -80,12 +80,16 @@ Writing is thinking, and thinking is hard work.
 <div><hr /></div>
   <div data-block-type="2">
  <p class="quote">
+   **Kill Bill spoiler alert below**
+   <br>
+   *after she left him and was about to secretly marry another man, Bill murdered The Bride's entire wedding party and attempted to kill her and her unborn baby*
    <br>Bill: Was my reaction really that surprising? </br>
 <br>The Bride: Yes, it was. Could you do what you did? Of course you could. But, I never thought you could or would do that to me.</br>
 <br>Bill: I'm really sorry, Kiddo. You thought wrong.</br>
-  -Kill Bill, Volume 2
-<div data-block-type="47">
-  <br>I love that one. If someone you love is doing something evil to another, you're a fool to think they'd never do it to you. When I read this line in Meditations by Marcus Aurelius, I like was like, "Yesss, the Kiddo line!" "... and one more thought, from Apollo: That to expect bad people not to injure others is crazy. It's to ask the impossible. And to let them behave like that to other people but to expect them to exempt you is arrogant - the act of a tyrant."
+  -Kill Bill, Volume 2 (<a href="https://www.youtube.com/watch?v=jKXg2eMaNXU">clip here</a>)
+  <br><br>I love that one. If someone you love is doing something evil to another, you're a fool to think they'd never do it to you. When I read this line in Meditations by Marcus Aurelius, I like was like, "Yesss, the Kiddo line!" "... and one more thought, from Apollo: That to expect bad people not to injure others is crazy. It's to ask the impossible. And to let them behave like that to other people but to expect them to exempt you is arrogant - the act of a tyrant."
 <div><hr /></div>
+<div data-block-type="47">
+  
 </div>
 <div data-block-type="2">
