--- a/quotes.html
+++ b/quotes.html
@@ -20,11 +20,17 @@
 
 
 <h2>Favorite Quotes</h2>
-<p>I'm really inspired by other people's writing. I wanted to share some of my favorite quotes in one place.
-</p>
+<p>"Beyond the Mountain is another Mountain". - Haitian proverb</p>
  <div data-block-type="47">
 <div><hr /></div>
 </div>
+  <div data-block-type="2">
+   <p class="quote">
+   "What punishments of God are not gifts?”
+- J.R.R. Tolkien
+    <br> 
+  <div data-block-type="47">
+  
 <div data-block-type="2"> 
   <p class="quote">
   "In your life, you will be evaluated on your output... But your input is just as important. If you don’t have good input, you cannot maintain good output.
