--- a/quotes.html
+++ b/quotes.html
@@ -30,7 +30,25 @@
 - J.R.R. Tolkien
     <br> 
   <div data-block-type="47">
-  
+    </div>
+  <div data-block-type="2">
+   <p class="quote">
+    A hero is someone who admits their mistakes and strives to share their lessons with others. Hiding your gifts, hiding everything that matters too . 
+A hero not only acknowledges their mistakes but strives to rise above them, achieve redemption and inspires others to do the same. A failure wastes all their time and energy trying to hide their mistakes and as a result hides everything worth sharing too.
+   <br> 
+  <div data-block-type="47">
+   <div data-block-type="2">
+   <p class="quote">   
+    "Live with integrity. There's a goal challenging enough (understatement alert) to bring out your best self but also achievable, and, no matter how many times you achieve it, it's renewable until you draw your last breath."
+     - Carolyn Hax
+      <br> 
+  <div data-block-type="47"> 
+  <div data-block-type="47">
+   <div data-block-type="2">
+   <p class="quote">   
+     "I didn't take the easy road, I couldn't find it"
+     - Emily Nenni, Long Game
+    
 <div data-block-type="2"> 
   <p class="quote">
   "In your life, you will be evaluated on your output... But your input is just as important. If you don’t have good input, you cannot maintain good output.
