--- a/quotes.html
+++ b/quotes.html
@@ -33,9 +33,9 @@
     </div>
   <div data-block-type="2">
    <p class="quote">
-    A hero is someone who admits their mistakes and strives to share their lessons with others. Hiding your gifts, hiding everything that matters too . 
 A hero not only acknowledges their mistakes but strives to rise above them, achieve redemption and inspires others to do the same. A failure wastes all their time and energy trying to hide their mistakes and as a result hides everything worth sharing too.
-   <br> 
+   - Jessica Galbreath Berndt 
+     <br> 
   <div data-block-type="47">
    <div data-block-type="2">
    <p class="quote">   
