--- a/games.html
+++ b/games.html
@@ -21,7 +21,7 @@
   
 <div>
 <h2>Games</h2>
-<p>I learn so much when I code with others. Here are some games I've built with friends.</p>
+<p>I learn the most building and collobrating with others. Here are some games I've built with friends.</p>
 <br>
 <p> <a href="https://jfulghum.github.io/teaSet/">Tea Set</a></p>
 
