--- a/quotes.html
+++ b/quotes.html
@@ -54,7 +54,7 @@ A hero not only acknowledges their mistakes but strives to rise above them, achi
    <div data-block-type="2">
    <p class="quote">
  "I didn't take the easy road, I couldn't find it"
-     - Emily Nenni, Long Game
+     - Emily Nenni, The Long Game
     <br> 
   <div data-block-type="47">
 <div><hr /></div>  
@@ -75,7 +75,7 @@ A hero not only acknowledges their mistakes but strives to rise above them, achi
 <div data-block-type="2">
    <p class="quote">
   Another thing we tell founders is not to worry too much about the business model, at least at first. Not because making money is unimportant, but because <em>it's so much easier than building something great.</em>
-     Paul Graham, <a href="http://www.paulgraham.com/good.html">Be Good</a>
+     (emphasis mine.) Paul Graham, <a href="http://www.paulgraham.com/good.html">Be Good</a>
      <br> 
   <div data-block-type="47">
 <div><hr /></div>
