--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 <p>49. The Gifts of Imperfection, by Brene Brown ★★★1/2</p>
 <p>50. Three Uses of The Knife, by David Mamet ★★★1/2</p>
 <p>51. The Wife's Tale, by Aida Edemariam ★★1/2</p>
+<p>52. Meditations, by Marcus Aurelius ★★★</p>
   
   </div>
   <h2>2019</h2>
