--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 <p>50. Three Uses of The Knife, by David Mamet ★★★1/2</p>
 <p>51. The Wife's Tale, by Aida Edemariam ★★1/2</p>
 <p>52. Meditations, by Marcus Aurelius ★★★</p>
+<p>53. The Magic of Thinking Big, by David J. Schwartz ★★★</p>
   
   </div>
   <h2>2019</h2>
