--- a/quotes.html
+++ b/quotes.html
@@ -20,7 +20,7 @@
 
 
 <h2>Favorite Quotes</h2>
-<p>"Beyond the Mountain is another Mountain". - Haitian proverb</p>
+<p>"Beyond the Mountain is another Mountain" - Haitian proverb</p>
  <div data-block-type="47">
 <div><hr /></div>
 </div>
@@ -54,7 +54,7 @@ A hero not only acknowledges their mistakes but strives to rise above them, achi
    <div data-block-type="2">
    <p class="quote">
  "I didn't take the easy road, I couldn't find it"
-     - Emily Nenni, The Long Game
+     - Emily Nenni, Long Game
     <br> 
   <div data-block-type="47">
 <div><hr /></div>  
