--- a/quotes.html
+++ b/quotes.html
@@ -53,7 +53,8 @@ A hero not only acknowledges their mistakes but strives to rise above them, achi
     
    <div data-block-type="2">
    <p class="quote">
- "I didn't take the easy road, I couldn't find it"
+ "I didn't take the easy road, Oh I couldn't find it <br> 
+     So I took one of my own, and I'm gonna ride it"
      - Emily Nenni, Long Game
     <br> 
   <div data-block-type="47">
