--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 <p>51. The Wife's Tale, by Aida Edemariam ★★1/2</p>
 <p>52. Meditations, by Marcus Aurelius ★★★</p>
 <p>53. The Magic of Thinking Big, by David J. Schwartz ★★★</p>
+<p>54. Heartburn, by Nora Ephron ★★★</p>
   
   </div>
   <h2>2019</h2>
