--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
 <p>52. Meditations, by Marcus Aurelius ★★★</p>
 <p>53. The Magic of Thinking Big, by David J. Schwartz ★★★</p>
 <p>54. Heartburn, by Nora Ephron ★★★</p>
+<p>55. The Alchemist: A Graphic Novel, by Paulo Coelho and Derek Ruiz ★★1/2</p>
+<p>55. Selfish Reasons to Have More Kids: Why Being a Great Parent is Less Work and More Fun Than You Think, by Bryan Caplan ★★★</p>
   
   </div>
   <h2>2019</h2>
