--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 <p>53. The Magic of Thinking Big, by David J. Schwartz ★★★</p>
 <p>54. Heartburn, by Nora Ephron ★★★</p>
 <p>55. The Alchemist: A Graphic Novel, by Paulo Coelho and Derek Ruiz ★★1/2</p>
-<p>55. Selfish Reasons to Have More Kids: Why Being a Great Parent is Less Work and More Fun Than You Think, by Bryan Caplan ★★★</p>
-  
+<p>56. Selfish Reasons to Have More Kids: Why Being a Great Parent is Less Work and More Fun Than You Think, by Bryan Caplan ★★★</p>
+<p>57. The Case Against Education: Why the Education System Is a Waste of Time and Money, by Bryan Caplan ★★★1/2</p>  
   </div>
   <h2>2019</h2>
 
