--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
 </div>
 <div data-block-type="2">
 <div>
+<h2>2021</h2> 
+<p>1. Twilight of Democracy: The Seductive Lure of Authoritarianism, by Anne Applebaum ★★★1/2</p>
+<p>2. 10% Less Democracy, by Garett Jones ★★★</p>
+<p>3. Chelsea Chelsea Bang Bang, by Chelsea Handler ★★★</p>
+  
+  
 <h2>2020</h2>
   
 <p>1. <a href="https://www.amazon.com/gp/product/1644450003/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1644450003&linkId=fd31d4136770572b3c31f92ec1fe9a9a" target="_blank">Milkman</a>, by Anna Burns ★★★</p>
