--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <p>1. Twilight of Democracy: The Seductive Lure of Authoritarianism, by Anne Applebaum ★★★1/2</p>
 <p>2. 10% Less Democracy, by Garett Jones ★★★</p>
 <p>3. Chelsea Chelsea Bang Bang, by Chelsea Handler ★★★</p>
-  
+<p>4. My Horizontal Life, by Chelsea Handler ★★★1/2</p>  
   
 <h2>2020</h2>
   
