--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 <p>2. 10% Less Democracy, by Garett Jones ★★★</p>
 <p>3. Chelsea Chelsea Bang Bang, by Chelsea Handler ★★★</p>
 <p>4. My Horizontal Life, by Chelsea Handler ★★★1/2</p>  
+<p>5. The Charisma Myth, by Olivia Fox Cabane ★★★</p> 
+<p>6. When you are Engulfed in Flames, by David Sedaris ★★★1/2</p> 
   
 <h2>2020</h2>
   
