--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <p>4. My Horizontal Life, by Chelsea Handler ★★★1/2</p>  
 <p>5. The Charisma Myth, by Olivia Fox Cabane ★★★</p> 
 <p>6. When you are Engulfed in Flames, by David Sedaris ★★★1/2</p> 
-<p>7. Cat's Cradle, by Kurt Vonnegut ★★★/p> 
+<p>7. Cat's Cradle, by Kurt Vonnegut ★★★</p> 
   
 <h2>2020</h2>
   
