--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <p>5. The Charisma Myth, by Olivia Fox Cabane ★★★</p> 
 <p>6. When you are Engulfed in Flames, by David Sedaris ★★★1/2</p> 
 <p>7. Cat's Cradle, by Kurt Vonnegut ★★★</p> 
+<p>8. My Dark Vanessa, by Kate Elizabeth Russell ★★★★</p> 
   
 <h2>2020</h2>
   
