--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <p>
   <br/>The purpose of this list is TBD. It does motivate me to read more, and I would also like to start writing reviews. This list is the beginning.
   
-  Many of the books in my room are from the reading lists of other engineers I admire (like <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a>). 
+  Thank you to (like <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler </a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision </a>) who inspired me to devote more time to reading and create this list. 
 <br>
 
-  <br>This year my goal is to read - and finish - 52 books, one per week. 16 books in this year, I am noticing that I am forcing myself to finish books that I don't care for and would normally put down. My hope I will get better at choosing books I enjoy and that I will read more 4 and 3.5 star books in 2020 than I did in 2019, by volume alone.
+ 
   <br>
   ★★ is Not Great. Can't recommend.
    <br>
