--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 <p>6. When you are Engulfed in Flames, by David Sedaris ★★★1/2</p> 
 <p>7. Cat's Cradle, by Kurt Vonnegut ★★★</p> 
 <p>8. My Dark Vanessa, by Kate Elizabeth Russell ★★★★</p> 
+<p>9. Lolita, by Vladimir Nabokov ★★★1/2</p> 
   
 <h2>2020</h2>
   
