--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <p>3. Chelsea Chelsea Bang Bang, by Chelsea Handler ★★★</p>
 <p>4. My Horizontal Life, by Chelsea Handler ★★★1/2</p>  
 <p>5. The Charisma Myth, by Olivia Fox Cabane ★★★</p> 
-<p>6. When you are Engulfed in Flames, by David Sedaris ★★★1/2</p> 
+<p>6. When You Are Engulfed in Flames, by David Sedaris ★★★1/2</p> 
 <p>7. Cat's Cradle, by Kurt Vonnegut ★★★</p> 
 <p>8. My Dark Vanessa, by Kate Elizabeth Russell ★★★★</p> 
 <p>9. Lolita, by Vladimir Nabokov ★★★1/2</p> 
