--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <br>
   ★★1/2 Okay, didn't do it for me.
    <br>
-  ★★★ Good, enjoyable & overall yes recommendation. 
+  ★★★ Enjoyable & overall yes recommendation. 
    <br>
   ★★★1/2  Very Good, strong recommendation. 
    <br>
@@ -71,6 +71,7 @@
 <p>7. Cat's Cradle, by Kurt Vonnegut ★★★</p> 
 <p>8. My Dark Vanessa, by Kate Elizabeth Russell ★★★★</p> 
 <p>9. Lolita, by Vladimir Nabokov ★★★1/2</p> 
+<p>10. Is This Anything? By Jerry Seinfeld ★★★ </p>
   
 <h2>2020</h2>
   
