--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 <p>8. My Dark Vanessa, by Kate Elizabeth Russell ★★★★</p> 
 <p>9. Lolita, by Vladimir Nabokov ★★★1/2</p> 
 <p>10. Is This Anything? By Jerry Seinfeld ★★★ </p>
+<p>11. What We Don't Talk About When We Talk About Fat, by Aubrey Gordon ★★★1/2</p>
+<p>12. Influence, by Robert Cialdini ★★★ </p>
+<p>13. China in Ten Words, by Yu Hua ★★★★ </p>
   
 <h2>2020</h2>
   
