--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
 <div>
 <h2>My Reading List</h2>
 <p>
-  <br/>The purpose of this list is TBD. It does motivate me to read more, and I would also like to start writing reviews. This list is the beginning.
-  
-  Thank you to <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler </a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision </a> who have inspired me to devote more time to reading and create this list. 
+  <br/>
+  Thank you to <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler </a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision </a> who have inspired me to devote more time to reading and to create this list. 
 <br>
 
  
