--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 <p>11. What We Don't Talk About When We Talk About Fat, by Aubrey Gordon ★★★1/2</p>
 <p>12. Influence, by Robert Cialdini ★★★ </p>
 <p>13. China in Ten Words, by Yu Hua ★★★★ </p>
+<p>14. Black Magic: What Black Leaders Learned from Trauma and Triumph, by Chad Sanders ★★★1/2</p>
   
 <h2>2020</h2>
   
