--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
   
 <h2>2020</h2>
   
-<p>1. <! --<a href="https://www.amazon.com/gp/product/1644450003/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1644450003&linkId=fd31d4136770572b3c31f92ec1fe9a9a" target="_blank">  -->  Milkman, by Anna Burns ★★★</p>
-<p>2. <! --<a href=https://www.amazon.com/gp/product/1101906111/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1101906111&linkId=b01211fc3d7e1c33dbda12bd006319a4 target="_blank">  --> The Vegetarian, by Han Kang  ★★1/2</p>
-<p>3. <! --<a href="https://www.amazon.com/gp/product/0802124941/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0802124941&linkId=31dca720cb1c7fca816641bd6a790910">  --> The Sympathizer, by Viet Thanh Nguyen ★★★</p>
+<p>1. Milkman, by Anna Burns ★★★</p>
+<p>2. The Vegetarian, by Han Kang  ★★1/2</p>
+<p>3. The Sympathizer, by Viet Thanh Nguyen ★★★</p>
 <p>4. Heart of a Dog, by Mikhail Bulgakov ★★1/2
 <p>5. Tonight I'm Someone Else, by Chelsea Hodson  ★★★1/2 </p>
 <p>6. The Bell Jar, by Sylvia Plath ★★★1/2</p>
