--- a/index.html
+++ b/index.html
@@ -28,29 +28,30 @@
   <br/>
   Thank you to <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a> who have inspired me to devote more time to reading and to create this list. 
 <br>
-
- 
-  <br>
-  ★★ is Not Great. Can't recommend.
+  
+  
+ ★★★★ In Love. Books that I especially loved are in <em style="color:green;">green.</em>
    <br>
-  ★★1/2 Okay, didn't do it for me.
+ ★★★1/2  Very Good, strong recommendation. 
    <br>
-  ★★★ Enjoyable & overall yes recommendation. 
+ ★★★ Enjoyable & overall yes recommendation. 
    <br>
-  ★★★1/2  Very Good, strong recommendation. 
+ ★★1/2 Okay, didn't do it for me.
    <br>
-  ★★★★ In Love. Books that I especially loved are in <em style="color:green;">green.</em>
+ ★★ is Not Great. Can't recommend.
    <br>
+  
+ I try not to finish books I am not enjoying. Sometimes I will if I think the ending may redeem it, if it came very highly recommended, or if we are reading it for a book club. Otherwise, I cut my losses.  
+     <br>
+ To <a href ="https://tim.blog/2020/06/15/maria-popova-tyler-cowen-book-recommendations-transcript/">quote Tyler Cowen</a>,    <br>
+"People feel compelled to finish books they started. That’s just a tax on your reading. Why would you do that to yourself?  <br>
+Imagine a world where any restaurant you tried, you had to keep on going there for days or weeks. You’d hardly ever go out to eat.  <br>
+Take reading seriously. Develop a passion for it and view it as part of your practice as a knowledge worker to get ahead. Along the way, having fun doing so." <br>
   </p>
   
 </div>
 </div>
 <div data-block-type="47">
-<!-- 
-</div>
-</div>
-</div>
-</div> -->
 </div>
 </div>
 <div>
