--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
-<p>&lt;!doctype html&gt;</p>
-<p>Johanna Fulghum</p>
-<p> </p>
-<div><a href="https://jfulghum.github.io/writing/home.html">Home</a> <a href="https://jfulghum.github.io/writing/games.html">Games</a> <a href="https://jfulghum.github.io/writing/medium.html">Writing</a> <a href="https://jfulghum.github.io/writing/">Reading List</a> <a href="https://jfulghum.github.io/writing/quotes.html">Quotes</a></div>
-<h2>Johanna Fulghum</h2>
+<!doctype html>
+<head>
+  <title> Johanna Fulghum </title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Gelasio|Ibarra+Real+Nova&display=swap" rel="stylesheet">
+
+</head>
+<body>
+
+<div class='menu-container'>
+  <a class="nav-bar" href="https://jfulghum.github.io/writing/home.html">Home</a> 
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/games.html">Games</a> 
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/medium.html">Writing</a> 
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/">Reading List</a>
+  <a class="nav-bar"href="https://jfulghum.github.io/writing/quotes.html">Quotes</a>
+</div>
+
+  <h2 class="name">Johanna Fulghum</h2>
 <div data-type="page" data-updated-on="1579201647568">
 <div>
 <div>
