--- a/quotes.html
+++ b/quotes.html
@@ -71,23 +71,19 @@ A hero not only acknowledges their mistakes but strives to rise above them, achi
   
     </div>
    <p class="quote">
-  "Another thing we tell founders is not to worry too much about the business model, at least at first. Not because making money is unimportant, but because <em>it's so much easier than building something great.</em>"
-     (emphasis mine.) Paul Graham, <a href="http://www.paulgraham.com/good.html">Be Good</a>
+  "Another thing we tell founders is not to worry too much about the business model, at least at first. Not because making money is unimportant, but because it's so much easier than building something great."
+ Paul Graham, <a href="http://www.paulgraham.com/good.html">Be Good</a>
      <br> 
 <div>
 </div>
-<!-- <div data-block-type="2">  -->
 <p class="quote">"Anyone can learn physics. Anyone can learn math. Being “good at it” or “smart” is beside the point. If we enacted the same set of rules for being allowed to learn a topic to any other area of study, it would be disastrous: only a select few would be allowed to read Plato, we wouldn’t let people study a foreign language if they weren’t able to learn it in a few weeks, and people wouldn’t be allowed to play guitar unless they had a decent shot at being a famous musician. That is how ridiculous it is." - <a href="https://www.susanjfowler.com/blog/2016/8/26/from-the-fledgling-physicist-archives-if-susan-can-learn-physics-so-can-you">Susan Fowler</a>. I mentally replace "physics" with "software engineering":) </p>
     <br>
 <div></div>
-<!-- <div data-block-type="2"> -->
  <p class="quote">
-  “If anyone tells you that a certain person speaks ill of you, do not make excuses about what is said of you but answer, <em>He was ignorant of my other faults, else he would not have mentioned these alone.</em>"
+  “If anyone tells you that a certain person speaks ill of you, do not make excuses about what is said of you but answer, He was ignorant of my other faults, else he would not have mentioned these alone."
 ― Epictetus, The Enchiridion
        <br>
-<!-- <div data-block-type="47"> -->
 <div></div>
-<!-- <div data-block-type="2"> -->
   <p class="quote">
   Writing is thinking. 
 
