--- a/quotes.html
+++ b/quotes.html
@@ -18,6 +18,10 @@
   <h2 class="name">Johanna Fulghum</h2>
 
 <h2>Favorite Quotes</h2>
+  
+  
+  <table>
+    <tbody>
   <ul>
 <li> <p>"Beyond the mountain is another mountain" - Haitian proverb</p> </li> 
 <div>
@@ -108,3 +112,6 @@ Writing is thinking, and thinking is hard work.
 <div></div>
   </ul>
 </div>
+
+  </table>
+    </tbody>
