--- a/quotes.html
+++ b/quotes.html
@@ -23,7 +23,7 @@
   <table>
     <tbody>
   <ul>
-<li> <p>"Beyond the mountain is another mountain" - Haitian proverb</p> </li> 
+ <p><li>"Beyond the mountain is another mountain" - Haitian proverb </li> </p> 
 <div>
 
       
