--- a/quotes.html
+++ b/quotes.html
@@ -22,10 +22,7 @@
   
   <table>
     <tbody>
-  <ul>
- <p><li>"Beyond the mountain is another mountain" - Haitian proverb </li> </p> 
-<div>
-
+<ul>
       
  <br>
    <p class="quote">
@@ -96,10 +93,15 @@ Writing is thinking, and thinking is hard work.
   - Conor Neill, in <a href="https://www.youtube.com/watch?v=tOD1sRAj8wE">this youtube video</a>
     <br>
 <div></div>
- <p class="quote">
+  
+
+ <p><li>"Beyond the mountain is another mountain" - Haitian proverb </li> </p> 
+<div>
+
+<!--  <p class="quote">
   "It is very hard to fail completely if you aim high enough"
 ― Larry Page
-<div></div>
+<div></div> -->
  <p class="quote">
    **Kill Bill spoiler alert below**
    <br>
