--- a/quotes.html
+++ b/quotes.html
@@ -39,7 +39,7 @@
 <!--   <div data-block-type="2"> -->
    <p class="quote">
 <li> A hero not only acknowledges their mistakes but strives to rise above them, achieve redemption and inspires others to do the same. A failure wastes all their time and energy trying to hide their mistakes and as a result hides everything worth sharing too.
-   - Jessica Galbreath Berndt  </li> 
+   <br>  - Jessica Galbreath Berndt  </li> 
     <br> 
 <!--   <div data-block-type="47"> -->
 <div>
@@ -50,7 +50,7 @@
 <!--    <div data-block-type="2"> -->
    <p class="quote">
 <li> "Live with integrity. There's a goal challenging enough (understatement alert) to bring out your best self but also achievable, and, no matter how many times you achieve it, it's renewable until you draw your last breath."
-     - Carolyn Hax </li> 
+   <br>    - Carolyn Hax </li> 
     <br> 
 <!--   <div data-block-type="47"> -->
 <div>
@@ -64,7 +64,7 @@
 <!-- <div data-block-type="2"> -->
    <p class="quote">
    "Life is too short to not read the very best book you know of right now.”
-- Patrick Collision
+ <br> - Patrick Collision
     <br> 
 <div></div>
 
@@ -72,7 +72,7 @@
     </div>
    <p class="quote">
   "Another thing we tell founders is not to worry too much about the business model, at least at first. Not because making money is unimportant, but because it's so much easier than building something great."
- Paul Graham, <a href="http://www.paulgraham.com/good.html">Be Good</a>
+  <br> -Paul Graham, <a href="http://www.paulgraham.com/good.html">Be Good</a>
      <br> 
 <div>
 </div>
@@ -81,7 +81,7 @@
 <div></div>
  <p class="quote">
   “If anyone tells you that a certain person speaks ill of you, do not make excuses about what is said of you but answer, He was ignorant of my other faults, else he would not have mentioned these alone."
-― Epictetus, The Enchiridion
+ <br> ― Epictetus, The Enchiridion
        <br>
 <div></div>
   <p class="quote">
@@ -90,7 +90,7 @@
 To believe that something in your head feels clear, is thinking, is a very dangerous thing. When you try to put in down on a page in a structured order that someone else can digest, and you find you can’t… writing ideas down and laying the ideas out is thinking. Sitting and starting out a window, maybe with a cigarette, whatever you think it is that is philosophizing  is not structured thinking. It’s only when you are writing down, getting order into your thoughts on the page so that another person can get into the context, the perspective that you are pulling in to have your worldview. 
 
 Writing is thinking, and thinking is hard work.
-  - Conor Neill, in <a href="https://www.youtube.com/watch?v=tOD1sRAj8wE">this youtube video</a>
+   <br> - Conor Neill, in <a href="https://www.youtube.com/watch?v=tOD1sRAj8wE">this youtube video</a>
     <br>
 <div></div>
   
@@ -109,7 +109,7 @@ Writing is thinking, and thinking is hard work.
    <br>Bill: Was my reaction really that surprising? </br>
 <br>The Bride: Yes, it was. Could you do what you did? Of course you could. But, I never thought you could or would do that to me.</br>
 <br>Bill: I'm really sorry, Kiddo. You thought wrong.</br>
-  -Kill Bill, Volume 2 (<a href="https://www.youtube.com/watch?v=jKXg2eMaNXU">clip here</a>)
+  <br>  -Kill Bill, Volume 2 (<a href="https://www.youtube.com/watch?v=jKXg2eMaNXU">clip here</a>)
   <br><br>I love that one. If someone you love is doing something evil to another, you're a fool to think they'd never do it to you. When I read the following line in Meditations by Marcus Aurelius, I like was like, "Yesss, the Kiddo line!" "... and one more thought, from Apollo: That to expect bad people not to injure others is crazy. It's to ask the impossible. And to let them behave like that to other people but to expect them to exempt you is arrogant - the act of a tyrant." It also reminds me of the Socrates quote: "no evil can befall a good man", which I am still chewing over.
 <div></div>
   </ul>
