--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Writing is thinking, and thinking is hard work.
   
    <p class="quote">
 <li> "Live with integrity. There's a goal challenging enough (understatement alert) to bring out your best self but also achievable, and, no matter how many times you achieve it, it's renewable until you draw your last breath."
-   <br>    - Carolyn Hax </li>
+   <br>    - Carolyn Hax, <a href=https://www.washingtonpost.com/lifestyle/style/carolyn-hax-who-can-you-live-with--your-boyfriend-your-roomie-or-yourself/2019/12/23/c4d9c198-25be-11ea-ad73-2fd294520e97_story.html> "Who can you live with — your boyfriend, your roomie or yourself? </a>  </li>
 
  <p><li>"Beyond the mountain is another mountain." - Haitian proverb </li> </p> 
 <div>
