--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ I'm more ruthless now about chucking books I am not feeling. Sometimes I push th
 <p>14. Black Magic: What Black Leaders Learned from Trauma and Triumph, by Chad Sanders ★★★1/2</p>
 <p>15. Ultralearning, by Scott Young ★★★</p>
 <p>16. Anagrams, by Lorrie Morre ★★★1/2</p>
+<p>17. Caste: The Origins of Our Discontents, by Isabel Wilkerson ★★★1/2</p>
   
 <h2>2020</h2>
 <p>1. Milkman, by Anna Burns ★★★</p>
