--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ I'm more ruthless now about chucking books I am not feeling. Sometimes I push th
 <p>15. Ultralearning, by Scott Young ★★★</p>
 <p>16. Anagrams, by Lorrie Morre ★★★1/2</p>
 <p>17. Caste: The Origins of Our Discontents, by Isabel Wilkerson ★★★1/2</p>
+<p>18. Birds of America, by Lorrie Morre ★★★1/2</p>
   
 <h2>2020</h2>
 <p>1. Milkman, by Anna Burns ★★★</p>
