--- a/home.html
+++ b/home.html
@@ -23,14 +23,19 @@
 <div>
 <h2>Welcome.</h2>
 <div class="intro">
-<p>My name is Johanna Fulghum, and I'm an writer, economist, and engineer living on the east coast. </p>
+<p>My name is Johanna Fulghum, and I'm an writer, economist, and engineer living in Denver, CO. </p>
+  
+<
   <br>
 <p>One day in January 2020 I was feeling so inspired by Susan Fowler's <a href="https://www.susanjfowler.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
   <br>
-  <p>A little about me, I work as an operations engineer at a healthcare start-up based in New York City. Before moving to New York, I worked as an economist for almost four years in Washington D.C. and I still feel like one at heart.
-I volunteer with <a href="https://codenation.org/">Code Nation</a> to teach web development to high schoolers in the Lower East Side twice a week. Working with the kids both inspired me and taught me how to create this site.
+  <p>A little about me, I work as an operations engineer at a healthcare start-up based in New York City. </br>
+    Before moving to New York, I worked as an economist for almost four years in Washington D.C. and I still feel like one at heart.</br>
+  
+I volunteer with <a href="https://codenation.org/">Code Nation</a> to teach web development to high schoolers in the Lower East Side twice a week. </br>
+  Working with the kids both inspired me and taught me how to create this site. </br>
 </p>
     <br>
-<p>I have million hobbies. A few of them are soccer, rock climbing, and <a href="https://www.nycgovparks.org/parks/cunningham-park">mountain biking.</a></p>
+<p>I have million hobbies. A few of them are soccer, rock climbing, and mountain biking.</p>
     <br> 
   </div>
