--- a/quotes.html
+++ b/quotes.html
@@ -57,7 +57,7 @@
 <p class="quote"> <li>"Anyone can learn physics. Anyone can learn math. Being “good at it” or “smart” is beside the point. If we enacted the same set of rules for being allowed to learn a topic to any other area of study, it would be disastrous: only a select few would be allowed to read Plato, we wouldn’t let people study a foreign language if they weren’t able to learn it in a few weeks, and people wouldn’t be allowed to play guitar unless they had a decent shot at being a famous musician. That is how ridiculous it is."
   
 <br> - Susan Fowler,  <a href="https://www.susanjfowler.com/blog/2016/8/26/from-the-fledgling-physicist-archives-if-susan-can-learn-physics-so-can-you">If Susan Can Learn Physics So Can You</a>. 
-<br> I mentally replace "physics" with "software engineering":) </p>
+<!-- <br> I mentally replace "physics" with "software engineering":) </p> -->
       </li>
 <br> 
 
