--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ I'm more ruthless now about chucking books I am not feeling. Sometimes I push th
 <p>16. Anagrams, by Lorrie Morre ★★★1/2</p>
 <p>17. Caste: The Origins of Our Discontents, by Isabel Wilkerson ★★★1/2</p>
 <p>18. Birds of America, by Lorrie Morre ★★★1/2</p>
+<p>19. Thick: And Other Essays, by Tressie McMillan Cottom ★★★</p>
+<p>20. Lords of the North, by Bernard Cornwell ★★★★</p>
   
 <h2>2020</h2>
 <p>1. Milkman, by Anna Burns ★★★</p>
