--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ I'm more ruthless now about chucking books I am not feeling. Sometimes I push th
 <p>18. Birds of America, by Lorrie Morre ★★★1/2</p>
 <p>19. Thick: And Other Essays, by Tressie McMillan Cottom ★★★</p>
 <p>20. Lords of the North, by Bernard Cornwell ★★★★</p>
+<p>21. The Manager's Path: A Guide for Tech Leaders Navigating Growth and Change, by Camille Fournier ★★★1/2</p>
   
 <h2>2020</h2>
 <p>1. Milkman, by Anna Burns ★★★</p>
