--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ I'm more ruthless now about chucking books I am not feeling. Sometimes I push th
 <p>19. Thick: And Other Essays, by Tressie McMillan Cottom ★★★</p>
 <p>20. Lords of the North, by Bernard Cornwell ★★★★</p>
 <p>21. The Manager's Path: A Guide for Tech Leaders Navigating Growth and Change, by Camille Fournier ★★★1/2</p>
+<p>22. How to Train Your Mind: Exploring the Productivity Benefits of Meditation, by Chris Bailey ★★★</p>
   
 <h2>2020</h2>
 <p>1. Milkman, by Anna Burns ★★★</p>
