--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
   
 
   <br>
-<p>One day in January 2020 I was feeling so inspired by Susan Fowler's <a href="https://www.susanjfowler.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
+<p>One day in January 2020 I was feeling so inspired by Susan Fowler's <a href="https://www.susanrigetti.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
   <br>
   <p>A little about me, I work as an operations engineer at a healthcare start-up based in New York City. </br>
     Before moving to New York, I worked as an economist for almost four years in Washington D.C. and I still feel like one at heart.</br>
