--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div data-block-type="2">
 <div>
 <h2>My Reading List</h2>
-<p><br />Thank you to <a href="https://www.susanjfowler.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a> who have inspired me to devote more time to reading and to create this list. <br /> <br /> ★★ is Not Great. Can't recommend. <br /> ★★1/2 Okay, didn't do it for me. <br /> ★★★ Enjoyable &amp; overall yes recommendation. <br /> ★★★1/2 Very Good, strong recommendation. <br /> ★★★★ In Love. Books that I especially loved are in <em>green.</em> <br /> <br /> 
+<p><br />Thank you to <a href="https://www.susanrigetti.com/reading-list"> Susan Fowler</a> and <a href="https://patrickcollison.com/bookshelf">Patrick Collision</a> who have inspired me to devote more time to reading and to create this list. <br /> <br /> ★★ is Not Great. Can't recommend. <br /> ★★1/2 Okay, didn't do it for me. <br /> ★★★ Enjoyable &amp; overall yes recommendation. <br /> ★★★1/2 Very Good, strong recommendation. <br /> ★★★★ In Love. Books that I especially loved are in <em>green.</em> <br /> <br /> 
 I'm more ruthless now about chucking books I am not feeling. Sometimes I push through if I think the ending may redeem it, but honestly that never happens. 
 <!--   I'm better now about not feeling guilty for cutting my losses.  -->
   <br />
