--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ I'm more ruthless now about chucking books I am not feeling. Sometimes I push th
 <p>20. Lords of the North, by Bernard Cornwell ★★★★</p>
 <p>21. The Manager's Path: A Guide for Tech Leaders Navigating Growth and Change, by Camille Fournier ★★★1/2</p>
 <p>22. How to Train Your Mind: Exploring the Productivity Benefits of Meditation, by Chris Bailey ★★★</p>
+<p>23. <a href="https://www.goodreads.com/review/show/3980828284"> Effortless</a>, by Greg McKeown ★★★</p>  
   
 <h2>2020</h2>
 <p>1. Milkman, by Anna Burns ★★★</p>
