--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ I'm more ruthless now about chucking books I am not feeling. Sometimes I push th
 <p>23. <a href="https://www.goodreads.com/review/show/3980828284"> Effortless</a>, by Greg McKeown ★★★</p>  
 <p>24. Weapons of Math Destruction: How Big Data Increases Inequality and Threatens Democracy, by Cathy O'Neil ★★★1/2</p>
 <p>25. Jesus and John Wayne: How Evangelicals Corrupted a Faith and Fractured a Nation, by Kristin Kobes Du Mez ★★★1/2</p>
+<p>26. Nine Nasty Words: English in the Gutter: Then, Now, and Forever, by John McWhorter ★★★★</p>
   
 <h2>2020</h2>
 <p>1. Milkman, by Anna Burns ★★★</p>
