--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ I'm more ruthless now about chucking books I am not feeling. Sometimes I push th
 <p>26. Nine Nasty Words: English in the Gutter: Then, Now, and Forever, by John McWhorter ★★★★</p>
 <p>27. Talking Back, Talking Black, by John McWhorter ★★★</p>
 <p>28. Studying with Miss Bishop: Memoirs from a Young Writer's Life, by Dana Gioia ★★★</p>
+<p>29. Self-Help, by Lorrie Moore ★★★</p>
   
 <h2>2020</h2>
 <p>1. Milkman, by Anna Burns ★★★</p>
